[package]
name = "git-repo-search"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "git-repo-search"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
